Bug 504441 - Low brightness after screen unlocking with only one user logged in
Summary: Low brightness after screen unlocking with only one user logged in
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Power management & brightness (other bugs)
Version First Reported In: 6.3.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 509502 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-17 20:58 UTC by johan.claudebreuninger
Modified: 2026-02-19 21:27 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description johan.claudebreuninger 2025-05-17 20:58:27 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY

Screen brightness is low after unlocking session and stays on the dimmed settings.

STEPS TO REPRODUCE
1. Session locks
2. Display goes into power saving mode
3. Input password into screen locker 
4. External display brightness does not go back to previously selected brightness but stays dimmed.

OBSERVED RESULT

Screen brightness is low after unlocking session and stays on the dimmed settings.

EXPECTED RESULT

Screen brightness should revert to value previously selected before the sessions locks and the screen goes into sleep mode. 

SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i5-10500T CPU @ 2.30GHz
Memory: 16 Gio of RAM (15.3 Gio usable)
Graphics Processor: Intel® UHD Graphics 630
Manufacturer: LENOVO
Product Name: 11DQS02700
System Version: ThinkCentre M80q

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-05-19 14:34:35 UTC
This is with a desktop monitor, right? Can you mention the hardware?

Did this start happening with the Plasma 6.4 beta, or did it start happening earlier and you're only just reporting it now?
Comment 2 Jakob Petsovits 2025-05-19 19:24:26 UTC Comment hidden (spam)
Comment 3 johan.claudebreuninger 2025-05-19 19:37:23 UTC
Hello Nate,

I realize the quality of my bug ticket is very bad.

Yes, it is an external monitor connected over DisplayPort.
My graphics card is an Intel UHD 630.
Monitor is a LG UltraGear QHD.

My issue started appearing with Plasma 6.4 beta.
Comment 4 Zamundaaa 2025-05-26 14:03:12 UTC Comment hidden (spam)
Comment 5 Nate Graham 2025-06-06 17:16:17 UTC
Johan, did you also have another user logged in at the time this happened? If not, then probably Jakob's issue is something different.

Can you paste the output of running `kscreen-doctor -o | grep -i bright` in a terminal window both before and after the session locks?
Comment 6 johan.claudebreuninger 2025-06-07 02:36:13 UTC
(In reply to Nate Graham from comment #5)
> Johan, did you also have another user logged in at the time this happened?
> If not, then probably Jakob's issue is something different.

Hi Nate, no other users logged in.
 
> Can you paste the output of running `kscreen-doctor -o | grep -i bright` in
> a terminal window both before and after the session locks?

Before:
> [01;33m	Brightness control: [0;0msupported, set to 100% and dimming to 100%

After:
> [01;33m	Brightness control: [0;0msupported, set to 100% and dimming to 100%

Screen is dimmed, and I need to move the brightness cursor down from 100% to any value and back to have the brightness from before the screen lock / power saving mode back.
Comment 7 Nate Graham 2025-06-09 16:19:22 UTC
Ok, so not Jakob's issue. Jakob, can we get another bug report for that one?

Based on the kscreen-doctor output, it looks like the actual state is not matching what powerdevil and kscreen think it is.
Comment 8 nahoj 2025-06-09 17:33:55 UTC
I believe I experience the same behavior as my fellow Johan with Plasma 6.3.4. My external screen dimming is triggered by anything that disconnects it, such as my PC going to standby or me turning the screen off and on again.

I also get "Brightness control: supported, set to 100% and dimming to 100%" both before and after.

To see if it is the same, Johan, you could try to see if it happens if you set your screen not to go to sleep when the screen locks. My screen doesn't dim just from locking the screen, as long as it doesn't go to sleep.

If it is the same bug, `systemctl --user restart plasma-powerdevil` restores brightness to its desired level.
Comment 9 nahoj 2025-06-09 17:45:05 UTC
Note: I have observed 2 variants:
- the screen dims but I can change back the brightness with the brightness plasmoid;
- the screen dims and disappears from the brightness plasmoid until I restart plasma-powerdevil. When that one happens, I can still change the brightness using VDUcontrols without restarting it.

I also noticed this: if I turn off my screen (to standby, not unplugging it), kscreen-doctor doesn't detect any change, until I turn my screen off and on again, at which time it briefly detects as disconnected, then connected again. Claude AI says this is normal because of how my screen behaves. The screen has a built-in KVM dock, and the EDID (`</sys/class/drm/card*/card*-DP*/edid hexdump -C`) remains when I put the screen to standby. (Lenovo P27h-30)
Comment 10 nahoj 2025-06-09 17:48:13 UTC
TYPO: if I turn off my screen [...], kscreen-doctor doesn't detect any change, until I turn my screen on* again
Comment 11 johan.claudebreuninger 2025-06-19 03:14:52 UTC
systemctl --user restart plasma-powerdevil doesn't bring back the screen brightness I had before my monitor going to sleep. I have to change the toggle of the brightness plasmoid (from 100 % to any value, back to 100%) for the screen brightness to go back to the original value from before the monitor went to sleep.
Comment 12 johan.claudebreuninger 2025-06-20 00:55:37 UTC
Disabling the automated brightness lowering while inactive mitigates the issue for now.
Comment 13 xniksysx 2025-06-27 08:01:23 UTC
Operating System: Arch Linux 
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.3-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 32 ГиБ of RAM (31.2 ГиБ usable)
Graphics Processor: AMD Radeon RX 7800 XT
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: X570S AORUS ELITE AX
System Version: -CF

Same problem for me. After screen dimming and sleep, second screen not restore brightness from dimming level.
Comment 14 D. Debnath 2025-07-23 08:22:04 UTC
I too started noticing this recently, most likely after 6.4. External monitor brightness is reset to 30% after unlocking screen.
Comment 15 TraceyC 2025-10-01 17:16:06 UTC
*** Bug 509502 has been marked as a duplicate of this bug. ***
Comment 16 Zamundaaa 2026-01-28 17:20:34 UTC
Git commit cc02a49b55fae83fcc155fe5d90438de7382f9a5 by Xaver Hugl.
Committed on 28/01/2026 at 15:57.
Pushed by zamundaaa into branch 'master'.

workspace: also update current brightness when changing the brightness device

Otherwise, the compositor may not update the brightness to match the desired
value
Related: bug 503268

M  +3    -1    src/backends/drm/drm_output.cpp
M  +1    -1    src/core/outputconfiguration.h
M  +3    -1    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/cc02a49b55fae83fcc155fe5d90438de7382f9a5
Comment 17 Bug Janitor Service 2026-01-28 19:58:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8721
Comment 18 Zamundaaa 2026-01-28 21:45:05 UTC
Git commit e75d392217b4a6311cfe84996b9a75b1c1e67c19 by Xaver Hugl.
Committed on 28/01/2026 at 19:57.
Pushed by zamundaaa into branch 'Plasma/6.6'.

workspace: also update current brightness when changing the brightness device

Otherwise, the compositor may not update the brightness to match the desired
value
Related: bug 503268


(cherry picked from commit cc02a49b55fae83fcc155fe5d90438de7382f9a5)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +3    -1    src/backends/drm/drm_output.cpp
M  +1    -1    src/core/outputconfiguration.h
M  +3    -1    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/e75d392217b4a6311cfe84996b9a75b1c1e67c19
Comment 19 Bug Janitor Service 2026-02-17 23:19:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8834
Comment 20 Zamundaaa 2026-02-19 15:00:17 UTC
Git commit c36b67d6e900e3cc843c74150c6779cab1f0a52f by Xaver Hugl.
Committed on 19/02/2026 at 14:34.
Pushed by zamundaaa into branch 'master'.

backends/drm: implement dimming with software brightness on external screens

This avoids some unnecessary EEPROM writes, and should avoid issues around
restoring the original brightness value when the display disconnects and
reconnects.

M  +11   -2    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/c36b67d6e900e3cc843c74150c6779cab1f0a52f
Comment 21 Zamundaaa 2026-02-19 15:42:08 UTC
Git commit 145c1311e18839bcfd8240fadf4555d8807e0310 by Xaver Hugl.
Committed on 19/02/2026 at 15:11.
Pushed by zamundaaa into branch 'Plasma/6.6'.

backends/drm: implement dimming with software brightness on external screens

This avoids some unnecessary EEPROM writes, and should avoid issues around
restoring the original brightness value when the display disconnects and
reconnects.
(cherry picked from commit c36b67d6e900e3cc843c74150c6779cab1f0a52f)

M  +11   -2    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/145c1311e18839bcfd8240fadf4555d8807e0310