backends/drm: implement dimming with software brightness on external screens

This avoids some unnecessary EEPROM writes, and should avoid issues around
restoring the original brightness value when the display disconnects and
reconnects.

BUG: 504441
(cherry picked from commit c36b67d6e900e3cc843c74150c6779cab1f0a52f)